@@ -263,13 +263,7 @@ static __inline void softCall(u32 pc) {
 	pc0 = pc;
 	ra = 0x80001000;
 
-	// Fixes crashing problems with at least Final Fantasy 7 and Xenogears.
-	// This should be considered a temporary fix; after all, we do not
-	// know how much space below sp is in use.  It may be worth considering
-	// creating a new stack for interrupt handlers.
-	if ((sp >> 24) != 0x1f) sp -= 256;
 	while (pc0 != 0x80001000) psxCpu->ExecuteBlock();
-	if ((sp >> 24) != 0x1f) sp += 256;
 }
 
 static __inline void softCall2(u32 pc) {
@@ -277,13 +271,7 @@ static __inline void softCall2(u32 pc) {
 	pc0 = pc;
 	ra = 0x80001000;
 
-	// Fixes crashing problems with at least Final Fantasy 7 and Xenogears.
-	// This should be considered a temporary fix; after all, we do not
-	// know how much space below sp is in use.  It may be worth considering
-	// creating a new stack for interrupt handlers.
-	if ((sp >> 24) != 0x1f) sp -= 256;
 	while (pc0 != 0x80001000) psxCpu->ExecuteBlock();
-	if ((sp >> 24) != 0x1f) sp += 256;
 	ra = sra;
 }
 
@@ -2336,7 +2324,13 @@ void biosInterrupt() {
 		for (i=0; i<3; i++) {
 			if (psxHu32(0x1070) & (1 << (i+4))) {
 				if (RcEV[i][1].status == EvStACTIVE) {
+					// Fixes crashing problems with at least Final Fantasy 7 and Xenogears.
+					// This should be considered a temporary fix; after all, we do not
+					// know how much space below sp is in use.  It may be worth considering
+					// creating a new stack for interrupt handlers.
+					if ((sp >> 24) != 0x1f) sp -= 256;
 					softCall(RcEV[i][1].fhandler);
+					if ((sp >> 24) != 0x1f) sp += 256;
 				}
 				psxHwWrite32(0x1f801070, ~(1 << (i+4)));
 			}
